5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4485/executions/1712_2505.log
== SUBMITION (2019-05-14 23:40:30) 
-- CODE:
from math import *
x= eval(input("angulo:"))
k= int(input("termos:"))
t=0
s=1
n=1
y=0
while (-pi<=x) and (x<=+pi) and (t<k):
	t=t+1
	y=y+(x**n/factorial(n))*s
	n=n+2
	s=s*(-1)
print(round(Y,10))
-- EXECUTION TIME:
0.151269
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2505/main.py", line 13, in <module>
    print(round(Y,10))
NameError: name 'Y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:40:35) 
-- CODE:
from math import *
x= eval(input("angulo:"))
k= int(input("termos:"))
t=0
s=1
n=1
y=0
while (-pi<=x) and (x<=+pi) and (t<k):
	t=t+1
	y=y+(x**n/factorial(n))*s
	n=n+2
	s=s*(-1)
print(round(y,10))
-- EXECUTION TIME:
0.158841
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
